--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,20 +1,32 @@
 {
 	"name": "FurAffinity Extender",
-	"version": "1.1.3",
+	"version": "1.2",
 	"manifest_version": 2,
 	"description": "FurAffinity Extender adds to the your browsing experience of FurAffinity.net by adding additional client-side features.",
 	"icons": {
 		"48": "icon48.png",
 		"128": "icon128.png"
 	},
+	"background": {
+		"scripts": ["js/lib/jquery-1.8.1.min.js", "js/src/notifier.js"]
+	},
 	"content_scripts": [{
 		"matches": ["http://*.furaffinity.net/*"],
 		"js": ["js/lib/jquery-1.8.1.min.js", "js/lib/jquery.hotkeys.js", "js/src/base.js", "js/src/hotkeys.js", "js/src/open_in_tabs.js", "js/src/story_in_gdocs.js", "js/src/highlighter.js"],
 		"run_at": "document_start"
 	}],
+	"browser_action": {
+		"default_icon": {
+			"19": "icon19.png",
+			"38": "icon38.png"
+		},
+		"default_title": "FurAffinity"
+	},
 	"homepage_url": "http://andrewneo.github.com/faextender-chrome/",
 	"options_page": "options.html",
 	"permissions": [
+		"*://*.furaffinity.net/*",
+		"alarms",
 		"storage"
 	]
 }
