--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
   },
   "homepage": "https://github.com/AndrewNeo/faextender-chrome#readme",
   "private": true,
+  "scripts": {
+    "build": "gulp lint && gulp"
+  },
   "devDependencies": {
     "bower": "^1.8.0",
     "del": "^2.2.2",
+    "eslint": "^3.19.0",
+    "eslint-config-google": "^0.8.0",
     "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1",
     "gulp-zip": "^4.0.0",
     "main-bower-files": "^2.13.1",
     "path-exists": "^3.0.0",
