--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -1,6 +1,5 @@
 {
 	"name": "FurAffinity Extender",
-	"version": "3.0",
 	"manifest_version": 2,
 	"description": "FurAffinity Extender adds to the your browsing experience of FurAffinity.net by adding additional client-side features.",
 	"icons": {
@@ -17,16 +16,9 @@
 	],
 	"homepage_url": "http://andrewneo.github.com/faextender-chrome/",
 	"options_ui": {
-		"page": "options.html",
-		"chrome_style": true,
-		"browser_style": true
+		"page": "options.html"
 	},
 	"permissions": [
 		"storage"
-	],
-	"applications": {
-		"gecko": {
-			"id": "faextender@neocodenetworks.com"
-		}
-	}
+	]
 }
