--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-neo": "git+https://github.com/AndrewNeo/eslint-config-neo.git",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
+    "gulp-merge-json": "^1.2.0",
     "gulp-zip": "^4.0.0",
     "main-bower-files": "^2.13.1",
     "path-exists": "^3.0.0",
