--- a/package.json
+++ b/package.json
@@ -14,22 +14,32 @@
   "homepage": "https://github.com/AndrewNeo/faextender-chrome#readme",
   "private": true,
   "scripts": {
-    "build": "gulp lint && gulp"
+    "build": "npm-run-all build:webpack:chrome build:webpack:firefox",
+    "build:debug": "webpack",
+    "build:webpack:chrome": "webpack --env.PACKAGE_TARGET=chrome --env.production",
+    "build:webpack:firefox": "webpack --env.PACKAGE_TARGET=firefox --env.production",
+    "lint": "eslint --ext .js,.ts app/"
   },
   "devDependencies": {
-    "bower": "^1.8.2",
-    "del": "^2.2.2",
-    "eslint": "^4.8.0",
-    "eslint-config-neo": "git+https://github.com/AndrewNeo/eslint-config-neo.git",
-    "gulp": "^3.9.1",
-    "gulp-eslint": "^3.0.1",
-    "gulp-merge-json": "^1.2.0",
-    "gulp-zip": "^4.0.0",
-    "main-bower-files": "^2.13.1",
-    "path-exists": "^3.0.0",
-    "webpack-stream": "^3.2.0"
+    "@andrewneo/eslint-config": "^1.0.0",
+    "@types/jquery": "^3.3.29",
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@typescript-eslint/parser": "^1.9.0",
+    "clean-webpack-plugin": "^2.0.2",
+    "copy-webpack-plugin": "^5.0.3",
+    "eslint": "^5.16.0",
+    "html-webpack-plugin": "^3.2.0",
+    "merge-jsons-webpack-plugin": "^1.0.19",
+    "npm-run-all": "^4.1.5",
+    "ts-loader": "^6.0.1",
+    "typescript": "^3.4.5",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2",
+    "zip-webpack-plugin": "^3.0.0"
   },
   "dependencies": {
-    "webextension-polyfill": "^0.1.2"
+    "jquery": "^3.4.1",
+    "jquery.hotkeys": "^0.1.0",
+    "webextension-polyfill-ts": "^0.9.0"
   }
 }
