--- a/package.json
+++ b/package.json
@@ -16,29 +16,30 @@
   "scripts": {
     "build": "npm-run-all build:webpack:*",
     "build:debug": "webpack",
-    "build:webpack:chrome": "webpack --env.PACKAGE_TARGET=chrome --env.production",
-    "build:webpack:firefox": "webpack --env.PACKAGE_TARGET=firefox --env.production",
+    "build:webpack:chrome": "webpack --env PACKAGE_TARGET=chrome --env production",
+    "build:webpack:firefox": "webpack --env PACKAGE_TARGET=firefox --env production",
     "lint": "eslint --ext .js,.ts app/"
   },
   "devDependencies": {
     "@types/jquery": "^3.3.31",
-    "@typescript-eslint/eslint-plugin": "^2.14.0",
-    "@typescript-eslint/parser": "^2.14.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "eslint": "^6.8.0",
-    "html-webpack-plugin": "^3.2.0",
-    "merge-jsons-webpack-plugin": "^1.0.20",
+    "@types/webextension-polyfill": "^0.10.7",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "eslint": "^8.55.0",
+    "html-webpack-plugin": "^5.5.3",
+    "merge-jsons-webpack-plugin": "^2.0.1",
     "npm-run-all": "^4.1.5",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.7.4",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "zip-webpack-plugin": "^3.0.0"
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.2",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "zip-webpack-plugin": "^4.0.1"
   },
   "dependencies": {
     "jquery": "^3.4.1",
     "jquery.hotkeys": "^0.1.0",
-    "webextension-polyfill-ts": "^0.11.0"
+    "webextension-polyfill": "^0.10.0"
   }
 }
