--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "homepage": "https://github.com/cheeplusplus/faextender-chrome#readme",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "npm-run-all build:webpack:*",
     "build:debug": "webpack",
